first draft finished

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Excursion Travel App</title>
-    <link href="./stule.css" type="text/css"/>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+
+      <h1>Descover hidden places in the world around you</h1>
+      <p class="soon">Download Excursion (Coming soon!)</p>
+
+  <div class="iPhone">
+    <video width="30%" height="30%" autoplay loop>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+  <div class="camp"><img src="./resources/images/camp.jpg" alt="tent under the stars"/></div>
+
+  <div class="clear-phone"><img src="./resources/images/phone.png" alt="small phone picture"/></div>
+
+    <h2>Coming Soon for iPhone and Android</h3>
+    <p class="soon">Download Excursion (Coming soon!)</p>
+
+  <footer>
+    <p class="footer">&#169; Excursion</p>
+  </footer>
 
   </body>
 </html>
