Second draft finished

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
 
-      <h1>Descover hidden places in the world around you</h1>
+      <h1>Discover hidden places in the world around you</h1>
       <p class="soon">Download Excursion (Coming soon!)</p>
 
   <div class="iPhone">
-    <video width="30%" height="30%" autoplay loop>
+    <video width="30%" height="30%" autoplay muted loop>
       <source src="./resources/videos/excursion.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
